add basic examples and starter components

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -5,6 +5,11 @@
 @import 'components/panel-confirmation';
 @import 'components/related-nav';
 
+@import 'components/interruption-card';
+@import 'components/card';
+
+@import 'prototype/list';
+
 ///////////////////////////////////////////
-// Add your custom CSS/Sass styles below... 
+// Add your custom CSS/Sass styles below...
 ///////////////////////////////////////////
