--- a/app/assets/sass/components/_card.scss
+++ b/app/assets/sass/components/_card.scss
@@ -1,9 +1,9 @@
-.app-promo {
+.app-card {
   margin-bottom: nhsuk-spacing(5) + $nhsuk-box-shadow-link; /* [1] */
   width: 100%;
 }
 
-.app-promo__wrapper {
+.app-card__wrapper {
   background-color: $color_nhsuk-white;
   box-shadow: 0 $nhsuk-box-shadow-link 0 0 $color_nhsuk-grey-4; /* [2] */
   display: block;
@@ -13,7 +13,7 @@
 
 }
 
-.app-promo__img {
+.app-card__img {
   @include print-hide();
 
   border-bottom: 1px solid $color_nhsuk-grey-5; /* [8] */
@@ -22,15 +22,15 @@
 
 }
 
-.app-promo__heading {
+.app-card__heading {
   margin-bottom: nhsuk-spacing(3);
 }
 
-.app-promo__content {
+.app-card__content {
   @include top-and-bottom();
   @include nhsuk-responsive-padding(5);
 }
 
-.app-promo__description {
+.app-card__description {
   color: $nhsuk-secondary-text-color;
 }
