--- a/app/views/examples/card.html
+++ b/app/views/examples/card.html
@@ -22,15 +22,10 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      {{ backLink({
-        "href": "index",
-        "text": "Back to list"
-      }) }}
-
-      <div class="app-promo">
-        <div class="app-promo__wrapper">
-          <div class="app-promo__content">
-            <h1 class="app-promo__heading nhsuk-heading-l">{{ contentTitle }}</h1>
+      <div class="app-card">
+        <div class="app-card__wrapper">
+          <div class="app-card__content">
+            <h1 class="app-card__heading nhsuk-heading-l">{{ contentTitle }}</h1>
             <p>
             The text jumps out a bit more:
             </p>
@@ -48,6 +43,10 @@
         </div>
       </div>
 
+      {{ backLink({
+        "href": "index",
+        "text": "Back to list"
+      }) }}
 
     </div>
   </div>
