add interruption card example

--- a/app/views/examples/index.html
+++ b/app/views/examples/index.html
@@ -37,6 +37,12 @@
             <p>In-service content card</p>
           </a>
         </li>
+        <li class="app-list-cards__item">
+          <a href="/{{ PROTOTYPEURL }}/interruption-card">
+            <h3 class="app-list-cards__heading nhsuk-heading-m">Interruption card</h3>
+            <p>In-service card that interrupts a journey to explain an important thing</p>
+          </a>
+        </li>
       </ul>
 
       {{ backLink({
