add check data pattern

--- a/app/views/examples/index.html
+++ b/app/views/examples/index.html
@@ -28,6 +28,17 @@
 
       <p>Ready made examples to copy</p>
 
+      <h2>Patterns</h2>
+      <ul class="app-list--unstyled app-list-cards">
+        <li class="app-list-cards__item">
+          <a href="/{{ PROTOTYPEURL }}/check-data">
+            <h3 class="app-list-cards__heading nhsuk-heading-m">Check data is right</h3>
+            <p>Help users check details are right</p>
+          </a>
+        </li>
+      </ul>
+
+
       <h2>Pages</h2>
 
       <ul class="app-list--unstyled app-list-cards">
