--- a/app/views/layouts/layout-transactional.html
+++ b/app/views/layouts/layout-transactional.html
@@ -5,7 +5,7 @@
 
 <!-- Adds a custom class to the <main> wrapper -->
 <!-- nhsuk-main-wrapper--s reduces top and bottom padding of the page -->
-{% set mainClasses = 'nhsuk-main-wrapper--s' %}
+{% set mainClasses = '' %}
 
 {% block headCSS %}
   <link href="/css/main.css" rel="stylesheet">
