add summary page

--- a/app/views/examples/index.html
+++ b/app/views/examples/index.html
@@ -32,8 +32,14 @@
       <ul class="app-list--unstyled app-list-cards">
         <li class="app-list-cards__item">
           <a href="/{{ PROTOTYPEURL }}/check-data">
-            <h3 class="app-list-cards__heading nhsuk-heading-m">Check data is right</h3>
-            <p>Help users check details are right</p>
+            <h3 class="app-list-cards__heading nhsuk-heading-m">Help users confirm data is right</h3>
+            <p>Display some data and ask whether it is right</p>
+          </a>
+        </li>
+        <li class="app-list-cards__item">
+          <a href="/{{ PROTOTYPEURL }}/check-data-summary">
+            <h3 class="app-list-cards__heading nhsuk-heading-m">Let users check the details they gave is correct</h3>
+            <p>Display the details a user gave you before submission</p>
           </a>
         </li>
       </ul>
