reposition the interruption card into the patterns section

--- a/app/views/examples/index.html
+++ b/app/views/examples/index.html
@@ -31,6 +31,12 @@
       <h2>Patterns</h2>
       <ul class="app-list--unstyled app-list-cards">
         <li class="app-list-cards__item">
+          <a href="/{{ PROTOTYPEURL }}/interruption-card">
+            <h3 class="app-list-cards__heading nhsuk-heading-m">Help users understand an important thing before continuing</h3>
+            <p>Stop a flowing journey to explain an important thing (interruption card)</p>
+          </a>
+        </li>
+        <li class="app-list-cards__item">
           <a href="/{{ PROTOTYPEURL }}/check-data">
             <h3 class="app-list-cards__heading nhsuk-heading-m">Help users confirm data is right</h3>
             <p>Display some data and ask whether it is right</p>
@@ -52,12 +58,6 @@
           <a href="/{{ PROTOTYPEURL }}/card">
             <h3 class="app-list-cards__heading nhsuk-heading-m">Card</h3>
             <p>In-service content card</p>
-          </a>
-        </li>
-        <li class="app-list-cards__item">
-          <a href="/{{ PROTOTYPEURL }}/interruption-card">
-            <h3 class="app-list-cards__heading nhsuk-heading-m">Interruption card</h3>
-            <p>In-service card that interrupts a journey to explain an important thing</p>
           </a>
         </li>
       </ul>
