--- a/app/views/examples/elements/checkboxes.html
+++ b/app/views/examples/elements/checkboxes.html
@@ -1,6 +1,6 @@
 {% set PROTOTYPEURL = "examples" %}
 {% set serviceName = "Secondary uses of data" %}
-{% set contentTitle = "Check this data" %}
+{% set contentTitle = "Checkboxes" %}
 {% set title = contentTitle + " - " + serviceName %}
 {% block pageScripts %}
 {% endblock %}
@@ -21,48 +21,36 @@
 {% block content %}
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
-
-      <h1>{{ contentTitle }}</h1>
-
-      {{ summaryList({
-        rows: [
-          {
-            key: {
-              text: "Name"
-            },
-            value: {
-              text: "Sarah Philips"
-            }
-          },
-          {
-            key: {
-              text: "Date of birth"
-            },
-            value: {
-              text: "5 January 1978"
-            }
-          }
-        ]
-      }) }}
-
       <form action="#" method="get">
-        {{ radios({
-          "idPrefix": "gov",
-          "name": "gov",
+        {{ checkboxes({
+          "idPrefix": "nationality",
+          "name": "nationality",
           "fieldset": {
             "legend": {
-              "text": "Is this really the person you are after?",
-              "classes": "nhsuk-fieldset__legend--m"
+              "text": contentTitle,
+              "classes": "nhsuk-fieldset__legend--xl",
+              "isPageHeading": true
             }
           },
+          "hint": {
+          "text": "Select all that apply"
+        },
           "items": [
             {
-              "value": "yes",
-              "text": "Yes, it is"
+              "value": "SCR",
+              "text": "Summary Care Record"
             },
             {
-              "value": "no",
-              "text": "No, it's not"
+              "value": "PDS",
+              "text": "Patient Demographic Service"
+            },
+            {
+              "value": "Data Release Register",
+              "text": "Data Release Register"
+            },
+            {
+              "value": "Research and planning",
+              "text": "Research and planning"
             }
           ]
         }) }}
@@ -71,9 +59,8 @@
         </input>
 
       </form>
-
       {{ backLink({
-        "href": "index",
+        "href": "../index",
         "text": "Back to list"
       }) }}
 
