--- a/app/views/examples/index.html
+++ b/app/views/examples/index.html
@@ -31,33 +31,41 @@
       <h2>Patterns</h2>
       <ul class="app-list--unstyled app-list-cards">
         <li class="app-list-cards__item">
-          <a href="/{{ PROTOTYPEURL }}/interruption-card">
+          <a href="/{{ PROTOTYPEURL }}/patterns/interruption-card">
             <h3 class="app-list-cards__heading nhsuk-heading-m">Help users understand an important thing before continuing</h3>
             <p>Stop a flowing journey to explain an important thing (interruption card)</p>
           </a>
         </li>
         <li class="app-list-cards__item">
-          <a href="/{{ PROTOTYPEURL }}/check-data">
+          <a href="/{{ PROTOTYPEURL }}/patterns/check-data">
             <h3 class="app-list-cards__heading nhsuk-heading-m">Help users confirm data is right</h3>
             <p>Display some data and ask whether it is right</p>
           </a>
         </li>
         <li class="app-list-cards__item">
-          <a href="/{{ PROTOTYPEURL }}/check-data-summary">
+          <a href="/{{ PROTOTYPEURL }}/patterns/check-data-summary">
             <h3 class="app-list-cards__heading nhsuk-heading-m">Let users check the details they gave is correct</h3>
             <p>Display the details a user gave you before submission</p>
           </a>
         </li>
       </ul>
 
-
       <h2>Pages</h2>
-
       <ul class="app-list--unstyled app-list-cards">
         <li class="app-list-cards__item">
-          <a href="/{{ PROTOTYPEURL }}/card">
+          <a href="/{{ PROTOTYPEURL }}/pages/card">
             <h3 class="app-list-cards__heading nhsuk-heading-m">Card</h3>
             <p>In-service content card</p>
+          </a>
+        </li>
+      </ul>
+
+      <h2>Elements</h2>
+      <ul class="app-list--unstyled app-list-cards">
+        <li class="app-list-cards__item">
+          <a href="/{{ PROTOTYPEURL }}/elements/checkboxes">
+            <h3 class="app-list-cards__heading nhsuk-heading-m">Checkboxes</h3>
+            <p>Let users choose more than one item</p>
           </a>
         </li>
       </ul>
