--- a/app/views/examples/patterns/check-data-summary.html
+++ b/app/views/examples/patterns/check-data-summary.html
@@ -108,10 +108,10 @@
           <input type="Submit" class="nhsuk-button" id="submit-details" value="Agree and submit">
         </form>
 
-      {{ backLink({
-        "href": "index",
-        "text": "Back to list"
-      }) }}
+        {{ backLink({
+          "href": "../index",
+          "text": "Back to list"
+        }) }}
 
     </div>
   </div>
