--- a/app/views/examples/patterns/interruption-card.html
+++ b/app/views/examples/patterns/interruption-card.html
@@ -1,6 +1,6 @@
 {% set PROTOTYPEURL = "examples" %}
 {% set serviceName = "Secondary uses of data" %}
-{% set contentTitle = "Example card" %}
+{% set contentTitle = "Example interruption card" %}
 {% set title = contentTitle + " - " + serviceName %}
 {% block pageScripts %}
 {% endblock %}
@@ -22,29 +22,30 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <div class="app-card">
-        <div class="app-card__wrapper">
-          <div class="app-card__content">
+      <div class="app-interruption">
+        <div class="app-interruption__wrapper">
+          <div class="app-interruption__content">
             <h1 class="app-card__heading nhsuk-heading-l">{{ contentTitle }}</h1>
             <p>
-            The text jumps out a bit more:
+              We'll need your:
             </p>
             <ul>
-              <li>it does</li>
-              <li>just the way it is</li>
+              <li>name</li>
+              <li>date of birth</li>
+              <li>postcode or NHS number</li>
             </ul>
+            <p>
+              We'll use these details to find your contact details from your health records so we can send you a security code.
+            </p>
             <form action="#" method="get">
-
-              <input type="submit" class="nhsuk-button" value="Continue">
-              </input>
-
+              <input type="submit" class="nhsuk-button nhsuk-button--reverse" value="Continue">
             </form>
           </div>
         </div>
       </div>
 
       {{ backLink({
-        "href": "index",
+        "href": "../index",
         "text": "Back to list"
       }) }}
 
