--- a/app/views/examples/index.html
+++ b/app/views/examples/index.html
@@ -68,6 +68,12 @@
             <p>Let users choose more than one item</p>
           </a>
         </li>
+        <li class="app-list-cards__item">
+          <a href="/{{ PROTOTYPEURL }}/elements/date">
+            <h3 class="app-list-cards__heading nhsuk-heading-m">Date input</h3>
+            <p>Ask for a date or birth or similar date</p>
+          </a>
+        </li>
       </ul>
 
       {{ backLink({
