--- a/app/views/examples/index.html
+++ b/app/views/examples/index.html
@@ -74,6 +74,12 @@
             <p>Ask for a date or birth or similar date</p>
           </a>
         </li>
+        <li class="app-list-cards__item">
+          <a href="/{{ PROTOTYPEURL }}/elements/input">
+            <h3 class="app-list-cards__heading nhsuk-heading-m">Text input</h3>
+            <p>Let users tell us what they need to say</p>
+          </a>
+        </li>
       </ul>
 
       {{ backLink({
