--- a/app/views/examples/index.html
+++ b/app/views/examples/index.html
@@ -58,6 +58,12 @@
             <p>In-service content card</p>
           </a>
         </li>
+        <li class="app-list-cards__item">
+          <a href="/{{ PROTOTYPEURL }}/pages/login">
+            <h3 class="app-list-cards__heading nhsuk-heading-m">Log in</h3>
+            <p>Ask users for their log in details</p>
+          </a>
+        </li>
       </ul>
 
       <h2>Elements</h2>
