--- a/app/views/examples/index.html
+++ b/app/views/examples/index.html
@@ -87,6 +87,12 @@
           </a>
         </li>
         <li class="app-list-cards__item">
+          <a href="/{{ PROTOTYPEURL }}/elements/multiple-input">
+            <h3 class="app-list-cards__heading nhsuk-heading-m">Multiple inputs</h3>
+            <p>Capture several different items of information</p>
+          </a>
+        </li>
+        <li class="app-list-cards__item">
           <a href="/{{ PROTOTYPEURL }}/elements/radio">
             <h3 class="app-list-cards__heading nhsuk-heading-m">Radio buttons</h3>
             <p>Ask users to make a choice</p>
