--- a/app/views/register-as-a-data-donor/v1/landing-pages/overview.html
+++ b/app/views/register-as-a-data-donor/v1/landing-pages/overview.html
@@ -54,10 +54,12 @@
         <li>plan and improve health and care services</li>
         <li>research and develop cures for serious illnesses</li>
       </ul>
-      <p>You can choose to help the NHS research by joining the data donor list.</p>
+
+      <h2>Becoming a data donor</h2>
+      <p>You can choose to help the NHS by joining the data donor list and taking part in new research studies.</p>
       <p>If you do become a donor we'll match you with research studies and ask you if you're happy to take part.</p>
       <p>If you agree to take part we will then share your details and data with the organisation running the study.</p>
-      <p>Any choice you make will not change your individual care.</p>
+      <p>Joining the register will not change your individual care.</p>
       <p>
         <a href="{{ "/" + PROTOTYPEURL + "/landing-pages/start" }}">Register as a data donor</a>
       </p>
