--- a/app/views/register-as-a-data-donor/v1/landing-pages/start.html
+++ b/app/views/register-as-a-data-donor/v1/landing-pages/start.html
@@ -56,6 +56,7 @@
       <p>Use this service to: </p>
       <ul>
         <li>register as a data donor </li>
+        <li>check if you're able to donate your data to the NHS </li>
       </ul>
 
         <h2 id="before-you-start">To use this service</h2>
