--- a/app/views/register-as-a-data-donor/v1/landing-pages/start.html
+++ b/app/views/register-as-a-data-donor/v1/landing-pages/start.html
@@ -66,7 +66,7 @@
           <li>have an NHS login - if you do not have one, we'll help you set one up</li>
         </ul>
 
-        <form class="" action="" method="get">
+        <form class="" action="/{{PROTOTYPEURL}}/eligibility/before-you-start" method="get">
           <input class="nhsuk-button" type="submit" value="Start now" aria-label="Start the online '{{ serviceName }}' service">
         </form>
 
