add connecting routes

--- a/app/views/register-as-a-data-donor/v1/eligibility/outcome/1.html
+++ b/app/views/register-as-a-data-donor/v1/eligibility/outcome/1.html
@@ -29,7 +29,7 @@
             <p>
             You can donate the data collected from the care you’ve received in England
             </p>
-            <form action="/{{ PROTOTYPEURL}}/eligibility/are-you-13-or-above" method="post">
+            <form action="/{{ PROTOTYPEURL}}/login/before" method="post">
               <input type="submit" class="nhsuk-button" value="Continue">
               </input>
             </form>
