--- a/app/views/register-as-a-data-donor/v1/eligibility/outcome/3.html
+++ b/app/views/register-as-a-data-donor/v1/eligibility/outcome/3.html
@@ -29,7 +29,7 @@
             <p>
             This is because you can only donate data collected from the care you've received in England
             </p>
-            <p>If you've think this is wrong or have received care in England before, you can <a href="#">continue to register as a data data</a> </p>
+            <p>If you've think this is wrong or have received care in England before, you can <a href="/{{ PROTOTYPEURL}}/login/before">continue to register as a data donor</a> </p>
           </div>
         </div>
       </div>
