--- a/app/views/register-as-a-data-donor/v1/index.html
+++ b/app/views/register-as-a-data-donor/v1/index.html
@@ -53,19 +53,19 @@
           </ul>
         </li>
         <li>
-          <a href="/{{PROTOTYPEURL}}/eligibility/1">Outcome (England, no)</a>
+          <a href="/{{PROTOTYPEURL}}/eligibility/outcome/1">Outcome (England, no)</a>
         </li>
         <li>
-          <a href="/{{PROTOTYPEURL}}/eligibility/2">Outcome (England, yes)</a>
+          <a href="/{{PROTOTYPEURL}}/eligibility/outcome/2">Outcome (England, yes)</a>
         </li>
         <li>
-          <a href="/{{PROTOTYPEURL}}/eligibility/2">Outcome (Scotland/Wales, yes)</a>
+          <a href="/{{PROTOTYPEURL}}/eligibility/outcome/2">Outcome (Scotland/Wales, yes)</a>
         </li>
         <li>
-          <a href="/{{PROTOTYPEURL}}/eligibility/3">Outcome (Scotland/Wales, no)</a>
+          <a href="/{{PROTOTYPEURL}}/eligibility/outcome/3">Outcome (Scotland/Wales, no)</a>
         </li>
         <li>
-          <a href="/{{PROTOTYPEURL}}/eligibility/3">Outcome (Northern Ireland)</a>
+          <a href="/{{PROTOTYPEURL}}/eligibility/outcome/3">Outcome (Northern Ireland)</a>
         </li>
       </ul>
 
