--- a/app/views/register-as-a-data-donor/v1/login/do-you-have-an-nhs-login.html
+++ b/app/views/register-as-a-data-donor/v1/login/do-you-have-an-nhs-login.html
@@ -1,6 +1,6 @@
 {% set PROTOTYPEURL = "register-as-a-data-donor/v1" %}
 {% set serviceName = "Register as a data donor" %}
-{% set contentTitle = "Are you aged 13 or older?" %}
+{% set contentTitle = "Do you have an NHS login?" %}
 {% set title = contentTitle + " - " + serviceName %}
 {% block pageScripts %}
 {% endblock %}
