--- a/app/views/register-as-a-data-donor/v1/contact-preference/future-contact-preference-text.html
+++ b/app/views/register-as-a-data-donor/v1/contact-preference/future-contact-preference-text.html
@@ -1,6 +1,6 @@
 {% set PROTOTYPEURL = "register-as-a-data-donor/v1/contact-preference" %}
 {% set serviceName = "Register as a data donor" %}
-{% set contentTitle = "Change your contact preference" %}
+{% set contentTitle = "We sent you confirmation by text that you've been added to the data donor register" %}
 {% set title = contentTitle + " - " + serviceName %}
 {% block pageScripts %}
 {% endblock %}
@@ -30,7 +30,7 @@
           "name": "contactPreference",
           "fieldset": {
             "legend": {
-              "text": "How would you prefer to be contacted?",
+              "text": "In the future how would you prefer to be contacted?",
               "classes": "nhsuk-fieldset__legend--m"
             }
           },
