Updated the javascript for email and text and updated the v1 index file

--- a/app/views/register-as-a-data-donor/v1/index.html
+++ b/app/views/register-as-a-data-donor/v1/index.html
@@ -41,23 +41,20 @@
       <h2>Joining the register</h2>
       <ul>
         <li>
-          <a href="/{{ PROTOTYPEURL }}/register/card-1">Card 1</a>
+          <a href="/{{ PROTOTYPEURL }}/register/do-you-want-to-register-3">Do you want to register</a>
         </li>
         <li>
-          <a href="/{{ PROTOTYPEURL }}/register/card-2">Card 2</a>
-        </li>
-        <li>
-          <a href="/{{ PROTOTYPEURL }}/register/do-you-want-to-register">Do you want to register</a>
-        </li>
-        <li>
-          <a href="/{{ PROTOTYPEURL }}/register/we've-added-you">We've added you to the register</a>
+          <a href="/{{ PROTOTYPEURL }}/register/weve-added-you">We've added you to the register</a>
         </li>
       </ul>
 
       <h2>Set your contact preferences</h2>
       <ul>
       <li>
-        <a href="/{{ PROTOTYPEURL }}/contact-preference/future-contact-preference">Future contact preference</a>
+        <a href="/{{ PROTOTYPEURL }}/contact-preference/future-contact-preference-email">Future contact preference email</a>
+      </li>
+      <li>
+        <a href="/{{ PROTOTYPEURL }}/contact-preference/future-contact-preference-text">Future contact preference text</a>
       </li>
       <li>
         <a href="/{{ PROTOTYPEURL }}/contact-preference/contact-preference-saved">Contact preference saved</a>
