--- a/app/views/register-as-a-data-donor/index.html
+++ b/app/views/register-as-a-data-donor/index.html
@@ -21,6 +21,10 @@
 {% block content %}
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
+      {{ backLink({
+        "href": "../index",
+        "text": "Back to prototype list"
+      }) }}
 
       <h1>
         {{ contentTitle }}
@@ -30,7 +34,7 @@
         <li class="app-list-cards__item">
           <a href="/{{ PROTOTYPEURL }}/v1/index">
             <h2 class="app-list-cards__heading nhsuk-heading-m">V1</h2>
-            <p>Initial concept</p>
+            <p>Initial concept for a service</p>
           </a>
         </li>
       </ul>
