--- a/app/views/register-as-a-data-donor/v1/register/card-1.html
+++ b/app/views/register-as-a-data-donor/v1/register/card-1.html
@@ -1,5 +1,5 @@
 
-{% set PROTOTYPEURL = "register-as-a-data-donor/v1/register" %}
+{% set PROTOTYPEURL = "register-as-a-data-donor/v1" %}
 {% set serviceName = "Register as a data donor" %}
 {% set contentTitle = "If you register as a data donor we'll add you to a list of donors" %}
 {% set title = contentTitle + " - " + serviceName %}
@@ -27,7 +27,7 @@
         <div class="app-card__wrapper">
           <div class="app-card__content">
             <h1 class="app-card__heading nhsuk-heading-l">{{ contentTitle }}</h1>
-            <form action="/{{ PROTOTYPEURL }}/card-2" method="post">
+            <form action="/{{ PROTOTYPEURL }}/register/card-2" method="post">
 
               <input type="submit" class="nhsuk-button" value="Continue">
               </input>
